@@ -3,7 +3,6 @@ package uk.gov.companieshouse.company_appointments.officerappointments;
 import static java.util.Optional.ofNullable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 import uk.gov.companieshouse.api.officer.FormerNames;
 import uk.gov.companieshouse.company_appointments.model.data.DeltaFormerNames;
@@ -17,7 +16,7 @@ class FormerNamesMapper {
                         .map(names -> new FormerNames()
                                 .forenames(names.getForenames())
                                 .surname(names.getSurname()))
-                        .collect(Collectors.toList()))
+                        .toList())
                 .orElse(null);
     }
 }
